--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/parvezk/color-converter.git"
+    "url": "https://github.com/parvezk/color-converter.git"
   },
   "keywords": [
-    "rgb", "hsv", "hex", "hex-codes", "color", "color-converter"
+    "rgb", "hsv", "hex", "hex-codes", "color", "color-conversion", "color-transform"
   ],
   "author": "Parvez Kose <flamboyanz@gmail.com> (http://www.creativitykills.com/)",
   "license": "MIT",
